// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getMarginPaddingStyles Different values ​​depends on the responsive 1`] = `
Object {
  "general": Object {
    "margin-bottom": "11undefined",
    "margin-left": "11undefined",
    "margin-right": "11undefined",
    "margin-top": "11undefined",
  },
  "l": Object {
    "margin-bottom": "5undefined",
    "margin-left": "5undefined",
    "margin-right": "5undefined",
    "margin-top": "5undefined",
  },
  "m": Object {
    "margin-bottom": "6undefined",
    "margin-left": "4undefined",
    "margin-right": "2undefined",
    "margin-top": "0undefined",
  },
  "s": Object {
    "margin-bottom": "0undefined",
    "margin-left": "0undefined",
    "margin-right": "0undefined",
    "margin-top": "0undefined",
  },
  "xl": Object {
    "margin-bottom": "45undefined",
    "margin-left": "45undefined",
    "margin-right": "45undefined",
    "margin-top": "45undefined",
  },
  "xs": Object {
    "margin-bottom": "1undefined",
    "margin-left": "1undefined",
    "margin-right": "1undefined",
    "margin-top": "1undefined",
  },
  "xxl": Object {
    "margin-bottom": "12undefined",
    "margin-left": "12undefined",
    "margin-right": "12undefined",
    "margin-top": "12undefined",
  },
}
`;

exports[`getMarginPaddingStyles Get a correct margin and padding 1`] = `
Object {
  "general": Object {
    "margin-bottom": "3undefined",
    "margin-left": "4undefined",
    "margin-right": "2undefined",
    "margin-top": "1undefined",
  },
  "l": Object {
    "margin-bottom": "3undefined",
    "margin-left": "4undefined",
    "margin-right": "2undefined",
    "margin-top": "1undefined",
  },
  "m": Object {
    "margin-bottom": "3undefined",
    "margin-left": "4undefined",
    "margin-right": "2undefined",
    "margin-top": "1undefined",
  },
  "s": Object {
    "margin-bottom": "3undefined",
    "margin-left": "4undefined",
    "margin-right": "2undefined",
    "margin-top": "1undefined",
  },
  "xl": Object {
    "margin-bottom": "3undefined",
    "margin-left": "4undefined",
    "margin-right": "2undefined",
    "margin-top": "1undefined",
  },
  "xs": Object {
    "margin-bottom": "3undefined",
    "margin-left": "4undefined",
    "margin-right": "2undefined",
    "margin-top": "1undefined",
  },
  "xxl": Object {
    "margin-bottom": "3undefined",
    "margin-left": "4undefined",
    "margin-right": "2undefined",
    "margin-top": "1undefined",
  },
}
`;
